fix read more button on sector page positioning on mobile

--- a/themes/sacre-davey/sass/_sectors.scss
+++ b/themes/sacre-davey/sass/_sectors.scss
@@ -71,7 +71,7 @@
 	padding: 8px 15px;
 	font-size: 1.3rem;
 	bottom: 30px;
-	left: 39%;
+	left: 30%;
 	border: 2px white solid;
 	@include desktop {
 		left: 45%;
