--- a/themes/sacre-davey/style.css
+++ b/themes/sacre-davey/style.css
@@ -1569,7 +1569,7 @@ footer {
   padding: 8px 15px;
   font-size: 1.3rem;
   bottom: 30px;
-  left: 39%;
+  left: 30%;
   border: 2px white solid; }
   @media (min-width: 600px) {
     .read-more-button {
